# sampler

./: CMakeLists.txt
src/: densityFunction.cpp  sampler.hpp  writerFileRaw.hpp
src/core/: constants.h  read-fibonacci-table.cpp  tbb_includes.h  utils.h
src/cuda/: fourier-cuda.cu  fouriermd-cuda.cu  utils_cuda.h
src/fourier-analysis/: continuous-fourier-transform.cpp  fourier-analysis.cpp  fourier-analysis.h
src/io/: write-eps.cpp  write-eps.h  write-exr.cpp  write-exr.h  write-image.h
src/main/: cft-cuda-demo.cxx  cli-demo1.cxx  cli-fourier-analysis-demo1.cxx  cli.cpp  variance-analysis-demo1.cxx
src/statistics/: mean-variance-progressive.cpp  statistics.h
src/test-functions/: box.cpp  ck-discontinuity.cpp  disk.cpp  gaussian-function-product.cpp  gaussian.cpp  halfspace.cpp  tent.cpp  test-functions.h
src/util-samples/: homogenize-pointsamples.cpp  util-samples.h
